--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,9 +4,11 @@ import { SITE_TITLE } from '../config';
 ---
 
 <header>
-  <h2>
-    {SITE_TITLE}
-  </h2>
+  <HeaderLink href="/"
+    ><h2>
+      {SITE_TITLE}
+    </h2>
+  </HeaderLink>
   <!-- <nav>
     <HeaderLink href="/">Home</HeaderLink>
     <HeaderLink href="https://github.com/ccsimmi" target="_blank">
