--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -2,7 +2,6 @@
 import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
-import HeaderLink from '../components/HeaderLink.astro';
 
 export interface Props {
   content: {
@@ -28,7 +27,7 @@ const {
     <Header />
     <main>
       <article>
-        {heroImage && <img width={720} height={360} src={heroImage} alt="" />}
+        {heroImage && <img src={heroImage} alt="" />}
         <h1 class="title">{title}</h1>
         {pubDate && <time>{pubDate}</time>}
         {
