--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
+import Profile from '../components/Profile.astro';
 
 // Use Astro.glob() to fetch all posts, and then sort them by date.
 const posts = (await Astro.glob('./blog/*.{md,mdx}')).sort(
@@ -19,6 +20,7 @@ const posts = (await Astro.glob('./blog/*.{md,mdx}')).sort(
   </head>
   <body>
     <Header title={SITE_TITLE} />
+    <Profile />
     <main>
       <section>
         <ul>
