--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,300;0,400;1,300;1,400&display=swap');
+
 /* Box sizing rules */
 *,
 *::before,
 *::after {
   box-sizing: border-box;
+  font-family: 'Nunito', sans-serif;
 }
 
 /* Remove default margin */
@@ -71,4 +74,10 @@ select {
     transition-duration: 0.01ms !important;
     scroll-behavior: auto !important;
   }
+}
+
+/* Custom styles */
+
+.profile-container > img.profile {
+  max-width: 5rem;
 }
