mobile styling for index page in general

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,11 +4,12 @@ import { SITE_TITLE } from '../config';
 ---
 
 <header>
-  <HeaderLink href="/"
-    ><h2>
-      {SITE_TITLE}
-    </h2>
-  </HeaderLink>
+  <h2>
+    <HeaderLink href="/">
+      {SITE_TITLE}</HeaderLink
+    >
+  </h2>
+
   <!-- <nav>
     <HeaderLink href="/">Home</HeaderLink>
     <HeaderLink href="https://github.com/ccsimmi" target="_blank">
