--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -4,6 +4,8 @@ import Profile from '../images/profile.svg';
 
 <div class="profile-container">
   <img alt="Self portait of myself" class="profile" src={Profile} />
-  <p>Personal blog by <a href="">Manjot Mandeir</a>.</p>
-  <p>I record my studies of development here.</p>
+  <div>
+    <p>Personal blog by <a href="">Manjot Mandeir</a>.</p>
+    <p>I record my studies of development here.</p>
+  </div>
 </div>
