--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,31 +19,33 @@ const posts = (await Astro.glob('./blog/*.{md,mdx}')).sort(
     <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
   </head>
   <body>
-    <Header title={SITE_TITLE} />
-    <Profile />
-    <main>
-      <section>
-        <ul>
-          {
-            posts.map((post) => (
-              <li>
-                <time datetime={post.frontmatter.pubDate}>
-                  {new Date(post.frontmatter.pubDate).toLocaleDateString(
-                    'en-us',
-                    {
-                      year: 'numeric',
-                      month: 'short',
-                      day: 'numeric',
-                    }
-                  )}
-                </time>
-                <a href={post.url}>{post.frontmatter.title}</a>
-              </li>
-            ))
-          }
-        </ul>
-      </section>
-    </main>
-    <Footer />
+    <div class="container">
+      <Header title={SITE_TITLE} />
+      <Profile />
+      <main>
+        <section>
+          <ul class="blogpost-list" role="list">
+            {
+              posts.map((post) => (
+                <li>
+                  <time datetime={post.frontmatter.pubDate}>
+                    {new Date(post.frontmatter.pubDate).toLocaleDateString(
+                      'en-us',
+                      {
+                        year: 'numeric',
+                        month: 'short',
+                        day: 'numeric',
+                      }
+                    )}
+                  </time>
+                  <a href={post.url}>{post.frontmatter.title}</a>
+                </li>
+              ))
+            }
+          </ul>
+        </section>
+      </main>
+      <Footer />
+    </div>
   </body>
 </html>
