--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,17 +28,27 @@ const posts = (await Astro.glob('./blog/*.{md,mdx}')).sort(
             {
               posts.map((post) => (
                 <li>
-                  <time datetime={post.frontmatter.pubDate}>
-                    {new Date(post.frontmatter.pubDate).toLocaleDateString(
-                      'en-us',
-                      {
-                        year: 'numeric',
-                        month: 'short',
-                        day: 'numeric',
-                      }
-                    )}
-                  </time>
-                  <a href={post.url}>{post.frontmatter.title}</a>
+                  <img
+                    alt="mountains"
+                    class="image-post"
+                    src="/mountains.jpg"
+                  />
+                  <div>
+                    <h3>
+                      <a href={post.url}>{post.frontmatter.title}</a>
+                    </h3>
+                    <time datetime={post.frontmatter.pubDate}>
+                      {new Date(post.frontmatter.pubDate).toLocaleDateString(
+                        'en-us',
+                        {
+                          year: 'numeric',
+                          month: 'short',
+                          day: 'numeric',
+                        }
+                      )}
+                    </time>
+                    <p>{post.frontmatter.description}</p>
+                  </div>
                 </li>
               ))
             }
