--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,7 +2,6 @@
 import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
 import Profile from '../components/Profile.astro';
 
 // Use Astro.glob() to fetch all posts, and then sort them by date.
@@ -16,11 +15,14 @@ const posts = (await Astro.glob('./blog/*.{md,mdx}')).sort(
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+    <BaseHead
+      title="Studious Dev"
+      description="Learnings of web dev from my studies"
+    />
   </head>
   <body>
     <div class="container">
-      <Header title={SITE_TITLE} />
+      <Header title="Studious Dev" />
       <Profile />
       <main>
         <section>
@@ -31,7 +33,7 @@ const posts = (await Astro.glob('./blog/*.{md,mdx}')).sort(
                   <img
                     alt="mountains"
                     class="image-post"
-                    src="/mountains.jpg"
+                    src={post.frontmatter.heroImage}
                   />
                   <div>
                     <h3>
