shadows to cards

--- a/src/components/Profile.astro
+++ b/src/components/Profile.astro
@@ -5,7 +5,9 @@ import Profile from '../images/profile.svg';
 <div class="profile-container">
   <img alt="Self portait of myself" class="profile" src={Profile} />
   <div>
-    <p>Personal blog by <a href="">Manjot Mandeir</a>.</p>
+    <p>
+      Personal blog by <a href="https://github.com/ccsimmi">Manjot Mandeir</a>.
+    </p>
     <p>I record my studies of development here.</p>
   </div>
 </div>
