styled blog post

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ const posts = (await Astro.glob('./blog/*.{md,mdx}')).sort(
               posts.map((post) => (
                 <li>
                   <img
-                    alt="mountains"
+                    alt=""
                     class="image-post"
                     src={post.frontmatter.heroImage}
                   />
