--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -10,11 +10,12 @@ export interface Props {
     pubDate?: string;
     updatedDate?: string;
     heroImage?: string;
+    alt?: string;
   };
 }
 
 const {
-  content: { title, description, pubDate, updatedDate, heroImage },
+  content: { title, description, pubDate, updatedDate, heroImage, alt },
 } = Astro.props;
 ---
 
@@ -22,12 +23,11 @@ const {
   <head>
     <BaseHead title={title} description={description} />
   </head>
-
   <body>
-    <Header />
+    <Header title="Studious Dev" />
     <main>
-      <article>
-        {heroImage && <img src={heroImage} alt="" />}
+      <article class="article">
+        {heroImage && <img src={heroImage} alt={alt} />}
         <h1 class="title">{title}</h1>
         {pubDate && <time>{pubDate}</time>}
         {
