turned h3 to h2 to get 100 score on accessibility lighthouse

--- a/src/components/HomeLinkIcon.astro
+++ b/src/components/HomeLinkIcon.astro
@@ -1,7 +1,7 @@
 ---
 ---
 
-<a href="/" class="go-home-icon">
+<a href="/" class="go-home-icon" aria-label="Go home">
   <svg
     xmlns="http://www.w3.org/2000/svg"
     viewBox="0 0 20 20"
