--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -2,21 +2,38 @@
 import BaseHead from '../components/BaseHead.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
-import { SITE_TITLE, SITE_DESCRIPTION } from '../config';
+import { SITE_TITLE_ERROR, SITE_DESCRIPTION_ERROR } from '../config';
 ---
 
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <BaseHead title={SITE_TITLE} description={SITE_DESCRIPTION} />
+    <BaseHead title={SITE_TITLE_ERROR} description={SITE_DESCRIPTION_ERROR} />
   </head>
   <body>
-    <Header title={SITE_TITLE} />
+    <Header title="Oops!" />
     <main>
       <section>
-        <p>Error page</p>
+        <p>
+          This page doesn't exist! Click here to <a href="/">return home</a>.
+        </p>
       </section>
     </main>
     <Footer />
+    <style>
+      body {
+        display: flex;
+        flex-direction: column;
+        height: 100vh;
+      }
+
+      footer {
+        align-self: flex-end;
+      }
+
+      p {
+        text-align: center;
+      }
+    </style>
   </body>
 </html>
