added image to 404 page

--- a/src/components/Picture.astro
+++ b/src/components/Picture.astro
@@ -2,4 +2,4 @@
 const { src, alt, srcset } = Astro.props;
 ---
 
-<img alt={alt} src={src} srcset={srcset} />
+<img class="image" alt={alt} src={src} srcset={srcset} />
