--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,7 +37,7 @@ const posts = (await Astro.glob('./blog/*.{md,mdx}')).sort(
                     src={post.frontmatter.heroImage}
                   />
                   <div>
-                    <h2>
+                    <h2 class="post-title">
                       <a href={post.url}>{post.frontmatter.title}</a>
                     </h2>
                     <time datetime={post.frontmatter.pubDate}>
