--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -207,14 +207,17 @@ h1 {
   letter-spacing: 0.2rem;
   line-height: 1.2;
   display: block;
-  margin-bottom: 0.8rem;
+}
+
+.post-title {
+  margin-bottom: 0;
 }
 
 h1 a {
   font-size: 2rem;
 }
 
-li h3 a:hover {
+li h2 a:hover {
   text-decoration: underline;
 }
 
@@ -240,7 +243,8 @@ main .article {
   margin: auto;
 }
 
-main .article img, .image {
+main .article img,
+.image {
   max-width: 100%;
   border-radius: 0.2rem;
   box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
@@ -248,6 +252,7 @@ main .article img, .image {
 
 .title {
   text-align: left;
+  margin-bottom: 0.8rem;
 }
 
 .article time {
